--- a/everest/pubspec.yaml
+++ b/everest/pubspec.yaml
@@ -38,10 +38,17 @@ dependencies:
   shared_preferences: ^2.2.3
   fluttertoast: ^8.2.7
   flutter_advanced_drawer: ^1.3.6
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/image/everest_wholesale logo.png"
+  min_sdk_android: 21    
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
