--- a/everest/pubspec.yaml
+++ b/everest/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   fluttertoast: ^8.2.7
   flutter_advanced_drawer: ^1.3.6
   flutter_launcher_icons: ^0.13.1
+  simple_barcode_scanner: ^0.1.1
+  mobile_scanner: ^5.1.1
 
 dev_dependencies:
   flutter_test:
