--- a/everest/android/app/src/main/AndroidManifest.xml
+++ b/everest/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
         android:label="Everest Order Mate"
+        android:enableOnBackInvokedCallback="true"
+        android:usesCleartextTraffic="true"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
