--- a/everest/pubspec.yaml
+++ b/everest/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   simple_barcode_scanner: ^0.1.1
   mobile_scanner: ^5.1.1
+  connectivity_plus: ^6.0.5
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
