--- a/everest/pubspec.yaml
+++ b/everest/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   mobile_scanner: ^5.1.1
   connectivity_plus: ^6.0.5
   http: ^1.2.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
