--- a/everest/pubspec.yaml
+++ b/everest/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   connectivity_plus: ^6.0.5
   http: ^1.2.2
   intl: ^0.19.0
+  vibration: ^2.0.1
 
 dev_dependencies:
   flutter_test:
